# urx-router

./: .gitignore  CLAUDE.md  README.ja.md  README.md  index.html  package.json  playwright.config.ts  pnpm-lock.yaml  tsconfig.json
.claude-plugin/: marketplace.json
.claude/skills/urx-routing-planner/: SKILL.md
.github/workflows/: ci.yml  format.yml  pages.yml  post-merge.yml  release.yml
docs/en/: architecture.md  console-sends.md  device-model.md  known-issues.md
docs/ja/: architecture.md  console-sends.md  device-model.md  known-issues.md
e2e/: audit.spec.ts  bustype.spec.ts  chrome.spec.ts  console.spec.ts  consolebustype.spec.ts  directout.spec.ts  ducker.spec.ts  eqoneknob.spec.ts  fxpost.spec.ts  gaterange.spec.ts  hide.spec.ts  insertfx.spec.ts  meterpoint.spec.ts  midi.spec.ts  multiselect.spec.ts  nodeoff.spec.ts  nodestate.spec.ts  notes.spec.ts  oscknob.spec.ts  pathtrace.spec.ts  phoneslevel.spec.ts  ratewarning.spec.ts  recpoint.spec.ts  rename.spec.ts  routing.spec.ts  saveerror.spec.ts  sdrec.spec.ts  sections.spec.ts  signaltype.spec.ts  ssmcs.spec.ts  stereometer.spec.ts  streamingdelay.spec.ts  tauri-stub.ts  viewstate.spec.ts  wheel.spec.ts
scripts/: capture-screenshots.mjs  gen-icon.mjs  reset-storage.mjs
src/: main.ts  style.css
src-tauri/: Cargo.toml  LICENSE.txt  tauri.conf.json
src-tauri/src/: lib.rs  midi.rs  vd.rs
src/core/: constraints.test.ts  constraints.ts  levels.audit.test.ts  levels.ts  meters.audit.test.ts  meters.ts  plan.audit.test.ts  plan.test.ts  plan.ts  platform.ts  routing.audit.test.ts  routing.test.ts  routing.ts  storage.audit.test.ts  storage.ts
src/core/control/: client.test.ts  client.ts  completeness.test.ts  control-edge.test.ts  (+25 more)
src/i18n/: en.ts  ja.ts
src/models/: build.audit.test.ts  build.ts  index.ts  initial-state.test.ts  initial-state.ts  initial-urx22.ts  initial-urx44v.ts  models.test.ts  skill-export.test.ts  skill-export.ts  types.ts
src/ui/: console.ts  dom.ts  graph.ts  inspector.ts  midi.ts
(+19 files in other folders)
