[package]
name = "urx-router"
# App version lives in package.json (tauri.conf.json reads "../package.json");
# this crate is never published, so its version is pinned and not bumped.
version = "0.0.0"
description = "Routing planner for YAMAHA URX series audio interfaces"
license = "MIT"
edition = "2021"
rust-version = "1.77"

[lib]
name = "urx_router_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Auto-update is desktop-only: the updater downloads and swaps the installed
# bundle, and process restarts the app afterwards. Live hardware control speaks
# the Device Center broker's WebSocket (plain ws://, no TLS) and is likewise
# desktop-only, as is the external MIDI control bridge (midir: CoreMIDI on
# macOS, WinMM on Windows).
[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
tungstenite = "0.30"
midir = "0.11"
